--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"typescript": "5.9.3"
 	},
 	"dependencies": {
-		"fastify": "5.6.1"
+		"dotenv": "17.2.3",
+		"fastify": "5.6.1",
+		"zod": "4.1.12"
 	}
 }
