chore: update devDependencies and add ESLint configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,11 @@
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
 
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
