--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@eslint/js": "9.38.0",
+		"@eslint/json": "0.13.2",
 		"@types/node": "24.9.1",
+		"eslint": "9.38.0",
+		"globals": "16.4.0",
 		"tsup": "8.5.0",
 		"tsx": "4.20.6",
-		"typescript": "5.9.3"
+		"typescript": "5.9.3",
+		"typescript-eslint": "8.46.2"
 	},
 	"dependencies": {
 		"dotenv": "17.2.3",
