--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"@types/node": "24.9.1",
 		"eslint": "9.38.0",
 		"globals": "16.4.0",
+		"prisma": "6.18.0",
 		"tsup": "8.5.0",
 		"tsx": "4.20.6",
 		"typescript": "5.9.3",
 		"typescript-eslint": "8.46.2"
 	},
 	"dependencies": {
+		"@prisma/client": "6.18.0",
 		"dotenv": "17.2.3",
 		"fastify": "5.6.1",
 		"zod": "4.1.12"
